refactor(*): modernize modular architecture with BigDecimal precision